tests/const_block_compiler_error_bad.stderr
tests/const_block_compiler_error_bad.sl:6:3: error: SL2075: consteval error: boom
