tests/const_block_compiler_error_bad.sl
import "compiler"

fn demo() {
	const {
		compiler.error("boom")
	}
}

fn main() {
	demo()
}
